--- a/analysis/TCC.Rmd
+++ b/analysis/TCC.Rmd
@@ -14,21 +14,28 @@ suppressMessages(library(tidyverse))
 source(here::here("code", "MixedModelsFunctions.R"))
 DataCarTC1 <- readRDS(file = here::here("output", "DataSelPreparedCar.rds"))
 DataCarTC2 <- readRDS(file = here::here("output", "BLUPsDisease.RDS"))
-DataCarTC3 <- "coming"
+DataCarTC3 <- read.table(file = here::here("data", "Preditos_TCC_ASD_PLS_18-20.txt"),
+                         header = T, sep = "\t", na.strings = "")
+colnames(DataCarTC1)
+table(DataCarTC3$Use)
+
+
 ```
 
 ## Temas Coleções Nucleares
 
 ```{r Temas Coleções Nucleares}
 ## Temática 1 - Produtividade de Raízes
-TC1Traits <- c("IC", "PTR", "NR", "DRY", "DMCsg", "PPA")
+TC1Traits <- c("IC", "PTR", "NR", "DRY", "DMC", "PPA")
 
 ## Temática 2 - Resistência a Doenças Foliares
-TC2Traits <- c("Anth", "BlLS", "BrLS", "WhLS")
+TC2Traits <- c("Anth", "BlLS", "BrLS", "WhLS", "Germinação 45DAP", "Couro de sapo", "Podridão", "Retencao foliar")
 
 ## Temática 3 - Qualidade das raízes
 # Verificar conjunto de dados de deteorização Fisiológica com Eder e predições de Carotenóides e DMC com Massaine
-TC3Traits <- c("HCNPic", "DMCsg", "DeteorizaçãoFisiologica")
+# Fazer uma coleção para Coloração Branca e uma para coloração amarela
+TC3Traits <- c("HCNPic", "DMC", "PPD", "TCC", "CorPolpa", "Podridao",
+               "Cook15", "Cook20", "Cook25", "Cook30", "Cook40")
 ```
 
 ## Coleção Nuclear Temática 1 - Produtividade de Raízes
